# QueryForge

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
